--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
     "development": {
       "username": "root",
       "password": "The0115!",
-      "database": "shopping_DB",
+      "database": "shopping_db",
       "host": "127.0.0.1",
       "port": 3306,
       "dialect": "mysql"
