--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": "Ttd07241994#",
+      "password": "The0115!",
       "database": "shopping_db",
       "host": "127.0.0.1",
       "port": 3306,
