--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^4.19.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql2": "^1.7.0",
-    "sequelize": "^4.44.3",
-    "eslint": "^4.19.1"
+    "sequelize": "^4.44.3"
   }
 }
