--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint": "^4.19.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "mysql": "^2.18.0",
     "mysql2": "^1.7.0",
+    "pg": "^7.17.1",
     "sequelize": "^4.44.3"
   }
 }
